--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html></script>
 <head>
 <link rel="me" href="https://www.blogger.com/profile/14019772965206887794">
@@ -35,7 +36,7 @@ div.b-mobile {display:none;}
 
 
     <meta charset="UTF-8">
-	<title>vodafone</title>
+	<title>كن صاحب الحظ</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Cairo:400,700&display=swap');
@@ -233,8 +234,8 @@ div.b-mobile {display:none;}
  
 
 		<div id="warch">
-<a href="هنا رابط العرض" class="mo-slide target="_blank">
-  <span class="circle"><i class="https://bit.ly/3tNQWBZ"></i></span>
+<a href="https://bit.ly/3sWJO7t" class="mo-slide target="_blank">
+  <span class="circle"><i class="https://bit.ly/3sWJO7t"></i></span>
   <span class="title">اشترك مجانا من هنا </span>
   <span class="title-hover">Click Here</span>
 </a>
